--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -40,7 +40,7 @@
         return new CSS2DObject(nodeEl);
       })
       .nodeThreeObjectExtend(true)
-      .onNodeClick(node => window.open(link.hyperlink))
+      .onNodeClick(node => window.open(node.href))
     ;
   </script>
 </body>
