--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -2,6 +2,7 @@
   <style> body { margin: 0; } </style>
 
   <script src="//unpkg.com/three"></script>
+  <script src="//unpkg.com/three-spritetext"></script>
 
   <script src="//unpkg.com/3d-force-graph"></script>
 <!--  <script src="../../dist/3d-force-graph.js"></script>-->
