--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -38,7 +38,7 @@
           sprite.textHeight = 8;
           return sprite;
       })
-      .onNodeClick(node => window.open('https://baidu.com'))
+      .onNodeClick(node => window.open(node.url))
     ;
   </script>
 </body>
