--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -39,6 +39,11 @@
           return sprite;
       })
       .onNodeClick(node => window.open(node.url))
+      .onNodeDragEnd(node => {
+          node.fx = node.x;
+          node.fy = node.y;
+          node.fz = node.z;
+      })
     ;
   </script>
 </body>
