--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -44,7 +44,7 @@
           node.fy = node.y;
           node.fz = node.z;
       })
-      .onNodeClick(node => {
+      .onNodeRightClick(node => {
           // Aim at node from outside it
           const distance = 40;
           const distRatio = 1 + distance/Math.hypot(node.x, node.y, node.z);
