--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -32,6 +32,7 @@
       .jsonUrl('../datasets/f.json')
       .nodeAutoColorBy('group')
       .linkAutoColorBy('value')
+      .linkWidth(4)
       .nodeThreeObject(node => {
           const sprite = new SpriteText(node.id);
           sprite.material.depthWrite = false; // make sprite background transparent
