--- a/example/html-nodes/index.html
+++ b/example/html-nodes/index.html
@@ -40,7 +40,7 @@
       .linkWidth(2)
       .showNavInfo(false)
       .nodeThreeObject(node => {
-          const sprite = new SpriteText(node.id);
+          const sprite = new SpriteText(node.title);
           sprite.material.depthWrite = false; // make sprite background transparent
           sprite.color = node.color;
           sprite.textHeight = 8;
